map working with firebase

--- a/test/mymap.html
+++ b/test/mymap.html
@@ -58,6 +58,8 @@
 			// loop markers
 
 			for(var i = 0; i < markers.length; i++){
+				console.log(markers);
+				console.log(markers[i].coords);
 				addMarker(markers[i]);
 			}
 
